# OpenRL

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
examples/: simple_dpo.py
rlhf/: __init__.py  version.py
rlhf/algorithms/: __init__.py  kto.py
rlhf/api/: __init__.py  server.py
rlhf/core/: metrics.py
rlhf/data/: __init__.py  dataset.py
rlhf/langchain/: integration.py
rlhf/models/: __init__.py  critic.py  reference.py
rlhf/optimization/: __init__.py  attention.py  memory.py  mixed_precision.py
rlhf/tracking/: __init__.py
rlhf/training/: __init__.py
rlhf/utils/: distributed.py
src/rlhf/algorithms/: base.py
src/rlhf/api/: server.py
src/rlhf/data/: dataset.py
src/rlhf/models/: reward.py
src/rlhf/tracking/: experiment.py
src/rlhf/training/: trainer.py
training_dashboard/: index.html
training_dashboard/src/: App.jsx
training_dashboard/src/components/: CreateExperiment.jsx  ExperimentDetail.jsx  ExperimentsList.jsx  SystemResources.jsx
