[package]
name = "rlhf-rust-ops"
version = "0.1.0"
edition = "2021"
authors = ["Nik Jois <nikjois@llamasearch.ai>"]
description = "High-performance training operations for RLHF"
license = "MIT"

[lib]
name = "rlhf_rust_ops"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19.0", features = ["extension-module"] }
ndarray = "0.15.6"
rayon = "1.7.0"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
anyhow = "1.0.75"
thiserror = "1.0.48"
parking_lot = "0.12.1"
byteorder = "1.4.3"
memmap2 = "0.7.1"
crossbeam = "0.8.2"
half = "2.3.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
